--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
 
         <header class="content">
 
-            <a id="logo" href="">Sy.</a>
+            <div id="logo" href="">Sy. </div>
 
             <div id="search">
-
-                <img src="" alt="">
-                <input type="text" name="" id="">
-                <img src="" alt="">
+                    
+                <input type="text" id="search-bar" placeholder="">
+                <svg xmlns="http://www.w3.org/2000/svg"  fill="currentColor" class="search-icon" viewBox="0 0 16 16">
+                    <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                </svg>
 
             </div>
 
@@ -42,7 +43,15 @@
 
         <section class="content">
 
-            <p>Diverse technology contents</p>
+            <div> <p>Programming</p> </div> 
+            <div> <p>Database</p> </div>
+            <div> <p>Operational Systems</p> </div>
+            <div> <p>Systems Analysis and Design</p> </div>
+            <div> <p>Security and Encryption</p> </div>
+            <div> <p>Web Marketing</p> </div>
+            <div> <p>Web Designer</p> </div>
+            <div> <p>Hardware</p> </div>
+            <div> <p>Software</p> </div>
 
         </section>
 
@@ -62,6 +71,7 @@
         </main>
 
     </div>
-    
+
 </body>
+
 </html>
