--- a/register.html
+++ b/register.html
@@ -18,43 +18,6 @@
 
 <body>
     <div class="container">
-<<<<<<< HEAD
-
-        <header class="content">
-
-            <a id="logo" href="">Sy.</a>
-
-            <div id="search">
-
-                <input type="text" id="search-bar" placeholder="">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="search-icon" viewBox="0 0 16 16">
-                    <path
-                        d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
-                </svg>
-
-            </div>
-
-            <div id="pages">
-                <a href="">Log In</a>
-                <a href="">Sign Up</a>
-            </div>
-
-
-            <a href="https://www.sycode.com.br/"><button id="about-us">About Us</button></a>
-
-        </header>
-        <section>
-            <div class="login">
-                <h2>Cadastro</h2>
-                <form action="processar_cadastro.php" method="POST">
-                    <div class="form-group">
-                        <label for="username">Usuário:</label>
-                        <input type="text" id="username" name="username" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="password">Senha:</label>
-                        <input type="password" id="password" name="password" required>
-=======
         <div id="sidebar">
             <header class="content">
                 <div id="pages">
@@ -63,9 +26,9 @@
                     <a id="sign up" href="">Sign Up</a>
                 </div>
                 <a href="https://www.sycode.com.br/"><button id="about-us">About Us</button></a>
-        </div>
+             </header>
+        </div>   
 
-        </header>
         <section>
             <div class="register">
                 <h2>Cadastro</h2>
@@ -75,20 +38,14 @@
                         <input type="text" id="firstname" name="firstname" required>
                     </div>
                     <div class="form-group">
-                        <label for="firstname">Last Name:</label>
-                        <input type="text" id="firstname" name="firstname" required>
->>>>>>> loginANDregister
+                        <label for="lastname">Last Name:</label>
+                        <input type="text" id="lastname" name="lastname" required>
                     </div>
                     <div class="form-group">
                         <label for="email">E-mail:</label>
                         <input type="email" id="email" name="email" required>
                     </div>
                     <div class="form-group">
-<<<<<<< HEAD
-                        <input type="submit" value="Cadastrar">
-                    </div>
-                </form>
-=======
                         <label for="password">Password:</label>
                         <input type="password" id="password" name="password" required>
                     </div>
@@ -98,9 +55,8 @@
                     </div>
                     <div class="form-group">
                         <input type="submit" value="Cadastrar">
-                    </div>
+                    </div>                     
                 </form>
             </div>
->>>>>>> loginANDregister
         </section>
 </body>
